# ML-project-2025

./: .gitignore  Dockerfile  Dockerfile_base  README.md  notebook.ipynb  pypi_description.md  pyproject.toml
project/: app.py  main.py  notebook.ipynb  train.py
project/models/: PredictionInput.py
project/scripts/: train.py
