[tool.poetry]
name = "project"
version = "1.0.0"
description = "Machine learning 2025"
authors = ["Piotr Kitlowski <piotr.kitlowski@gmail.com>"]
license = "MIT"
readme = "pypi_description.md"
packages = [
    { include = "project" }
]

[tool.poetry.dependencies]
python = "^3.12"
hatch = "*"
uv = "*"
scikit-learn = "1.6.1"
poetry = "*"
uvicorn = { extras = ["standard"], version = "*" }
fastapi = "*"
requests = "*"
kaggle = "*"
category_encoders = "*"
xgboost = "^3.0.0"
lightgbm = "*"
catboost = "*"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120